src/test/resources/testData/inspections/linkResolve/fileDoesntExist.adoc
link:<error descr="File doesn't resolve">notfound.adoc</error>[]

<<<error descr="Anchor doesn't resolve">doesntexist</error>>>

image::<error descr="File doesn't resolve">filedoesntexist.png</error>[]

image:<error descr="File doesn't resolve">filedoesntexist.png</error>[]

// no error, as modules is unknown
xref:component:module:test.adoc[]

// no error, as link starts with "/" as this is probably an absolute link at the site
link:/root[]

// no error, as resolves to URL
:myurl: http://any.org
link:{myurl}[]

// no error, as attribute doesn't resolve
link:{noattr}[]

:anattribute!:

ifdef::anattribute[]

// broken link not reported as it is excluded from the block
xref:nonexistent.adoc[]

endif::[]

xref:<error descr="File doesn't resolve">nonexistent.adoc</error>[]
